# formula_track_generator

./: .gitignore  CLAUDE.md  STAGE4_DOCUMENTATION.md  STAGE4_QUICK_REFERENCE.md  STAGE5_DOCUMENTATION.md  pyproject.toml
mirage/: .gitignore  README.md  pyproject.toml
mirage/pdf_to_md/: __init__.py  __main__.py  clean.py  config.py  extract.py  render.py  render_images.py  sectionize.py
mirage/vault/: Car_Mitsubishi_Mirage_1999.md
mirage/vault/00_Manual/Volume_1_Engine/00E_General_Electrical/: 00E__Harness_Connector_Inspection.md  00E__How_to_Diagnose.md  00E__Untitled_section.md
mirage/vault/00_Manual/Volume_1_Engine/00_General/: 00__1_2_GENERAL_How_to_Use_Troubleshooting.md  00__General_Data_and_Specifications.md  00__How_to_Use_This_Manual.md  00__How_to_Use_Troubleshooting.md  00__How_to_Use_Troubleshooting__2.md  00__How_to_Use_Troubleshooting__3.md  00__How_to_Use_Troubleshooting__4.md  00__How_to_Use_Troubleshooting__5.md  00__How_to_Use_Troubleshooting__6.md  00__Lubrication_and_Maintenance.md  00__Main_Sealant_and_Adhesive_Table.md  00__Maintenance_Service.md  00__Precautions_before_Service.md  00__Recommended_Lubricant_and_Lubricant_Capacity_Table.md  00__Scheduled_Maintenance_Table.md  00__Scheduled_Maintenance_Table__2.md  00__Tightening_Torque.md  00__Towing_and_Hoisting.md  00__Untitled_section.md  00__Untitled_section__2.md  00__Vehicle_Identification.md
mirage/vault/90_Templates/: Issue_Report.md  Maintenance_Log.md  Part_Catalog.md
mirage/vault/99_Dataview/: График_замен_масла.md  Открытые_проблемы.md  Расходы_за_год.md
(+937 files in other folders)
