[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1-track"
version = "0.1.0"
description = "Parametric F1 track generator for Assetto Corsa"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "scipy>=1.10",
    "numpy>=1.24",
    "matplotlib>=3.8",
    "plotly>=5.17",
]

[project.scripts]
f1track = "f1_track.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]
