[project]
name = "mirage-pdf-to-md"
version = "0.1.0"
description = "Convert the Mitsubishi Mirage 1999 service manual PDFs into an Obsidian vault."
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24",
    "pyyaml>=6.0",
]

[project.scripts]
mirage-pdf-to-md = "pdf_to_md.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pdf_to_md*"]
exclude = ["tests*", "vault*", "Mirage_1999_Service_Manual*"]
